--- a/templates/next/package.json
+++ b/templates/next/package.json
@@ -10,7 +10,7 @@
     "postinstall": "npm dedupe || true"
   },
   "dependencies": {
-    "@merit-systems/echo-next-sdk": "^0.0.20",
+    "@merit-systems/echo-next-sdk": "0.0.23",
     "ai": "5.0.19",
     "@ai-sdk/react": "2.0.17",
     "@ai-sdk/openai": "2.0.16",
