--- a/templates/next-image/package.json
+++ b/templates/next-image/package.json
@@ -6,13 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postinstall": "npm dedupe || true"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@ai-sdk/openai": "2.0.16",
     "@merit-systems/echo-next-sdk": "0.0.24",
-    "@merit-systems/echo-react-sdk": "^1.0.31",
+    "@merit-systems/echo-react-sdk": "1.0.33",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
@@ -43,16 +41,5 @@
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.8",
     "typescript": "^5"
-  },
-  "overrides": {
-    "ai": "5.0.19",
-    "@ai-sdk/openai": "2.0.16",
-    "@merit-systems/echo-next-sdk": {
-      "ai": "5.0.19",
-      "@ai-sdk/openai": "2.0.16"
-    },
-    "@merit-systems/echo-react-sdk": {
-      "ai": "5.0.19"
-    }
   }
 }
