--- a/.github/workflows/migrate-db.yml
+++ b/.github/workflows/migrate-db.yml
@@ -28,11 +28,11 @@ jobs:
           cache: 'pnpm'
       
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile --filter echo-control
+        run: pnpm install --frozen-lockfile --filter echo-control --ignore-scripts
         working-directory: ./packages/app/control
       
       - name: Run Prisma migrate deploy (Staging)
-        run: pnpm run prisma:migrate-deploy
+        run: pnpm run prisma:generate &&  pnpm run prisma:migrate-deploy
         working-directory: ./packages/app/control
         env:
           DATABASE_URL: ${{ secrets.STAGING_DB_URL }}
@@ -57,11 +57,11 @@ jobs:
           cache: 'pnpm'
       
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile --filter echo-control
+        run: pnpm install --frozen-lockfile --filter echo-control --ignore-scripts
         working-directory: ./packages/app/control
       
       - name: Run Prisma migrate deploy (Production)
-        run: pnpm run prisma:migrate-deploy
+        run: pnpm run prisma:generate &&  pnpm run prisma:migrate-deploy
         working-directory: ./packages/app/control
         env:
           DATABASE_URL: ${{ secrets.PRODUCTION_DB_URL }}
