--- a/templates/nextjs-api-key-template/package.json
+++ b/templates/nextjs-api-key-template/package.json
@@ -21,6 +21,7 @@
     "@ai-sdk/react": "2.0.17",
     "@merit-systems/echo-next-sdk": "0.0.24",
     "@merit-systems/echo-react-sdk": "1.0.33",
+    "@merit-systems/echo-typescript-sdk": "^1.0.17",
     "@prisma/client": "^6.16.2",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-collapsible": "^1.1.12",
