--- a/packages/app/server/.env.example
+++ b/packages/app/server/.env.example
@@ -53,3 +53,9 @@ OTEL_TRACES_EXPORTER=
 STRIPE_SECRET_KEY=
 STRIPE_PUBLISHABLE_KEY=
 
+
+# ----------
+# x402 Risk tolerance
+# ----------
+MAX_OUTPUT_TOKENS= 2000
+
