--- a/packages/app/server/.env.example
+++ b/packages/app/server/.env.example
@@ -58,3 +58,8 @@ STRIPE_PUBLISHABLE_KEY=
 # Echo
 # ----------
 ECHO_ROUTER_BASE_URL=
+
+# ----------
+# Facilitator
+# ----------
+FACILITATOR_BASE_URL=
