--- a/packages/app/server/package.json
+++ b/packages/app/server/package.json
@@ -73,14 +73,14 @@
     "typescript": "^5.3.3",
     "uuid": "^11.1.0",
     "viem": "^2.33.3",
-    "winston": "^3.17.0"
+    "winston": "^3.17.0",
+    "@google/genai": "^1.20.0"
   },
   "devDependencies": {
     "@anthropic-ai/sdk": "^0.39.0",
     "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.34.1",
     "@typescript-eslint/parser": "^8.34.1",
-    "@google/genai": "^1.20.0",
     "eslint": "^9.29.0",
     "supertest": "^6.3.4",
     "tsx": "^4.20.5",
