Add network parameter and update X402 response

--- a/packages/app/server/.env.example
+++ b/packages/app/server/.env.example
@@ -60,6 +60,7 @@ STRIPE_PUBLISHABLE_KEY=
 ECHO_ROUTER_BASE_URL=
 
 # ----------
-# Facilitator
+# x402
 # ----------
 FACILITATOR_BASE_URL=
+NETWORK=
