--- a/templates/next-video-template/package.json
+++ b/templates/next-video-template/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-slider": "^1.2.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@tanstack/react-query": "^5.90.2",
     "ai": "5.0.47",
     "autonumeric": "^4.10.9",
     "class-variance-authority": "^0.7.1",
