--- a/packages/app/server/package.json
+++ b/packages/app/server/package.json
@@ -41,6 +41,7 @@
   "license": "ISC",
   "dependencies": {
     "@coinbase/cdp-sdk": "^1.34.0",
+    "@google/genai": "^1.20.0",
     "@merit-systems/echo-typescript-sdk": "workspace:*",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/api-logs": "0.57.2",
@@ -63,6 +64,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.18.3",
+    "google-auth-library": "^10.3.0",
     "jose": "^6.0.11",
     "multer": "^2.0.2",
     "node-fetch": "^2.7.0",
@@ -73,8 +75,7 @@
     "typescript": "^5.3.3",
     "uuid": "^11.1.0",
     "viem": "^2.33.3",
-    "winston": "^3.17.0",
-    "@google/genai": "^1.20.0"
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@anthropic-ai/sdk": "^0.39.0",
