--- a/packages/app/server/package.json
+++ b/packages/app/server/package.json
@@ -41,6 +41,8 @@
   "license": "ISC",
   "dependencies": {
     "@coinbase/cdp-sdk": "^1.34.0",
+    "@coinbase/x402": "^0.5.0",
+    "@google/genai": "^1.20.0",
     "@merit-systems/echo-typescript-sdk": "workspace:*",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/api-logs": "0.57.2",
@@ -74,7 +76,7 @@
     "uuid": "^11.1.0",
     "viem": "^2.33.3",
     "winston": "^3.17.0",
-    "@google/genai": "^1.20.0"
+    "x402-express": "^0.6.5"
   },
   "devDependencies": {
     "@anthropic-ai/sdk": "^0.39.0",
