--- a/packages/app/server/tsconfig.json
+++ b/packages/app/server/tsconfig.json
@@ -7,5 +7,7 @@
     "types": ["node"]
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "__tests__/**/*"]
+  "exclude": ["node_modules", "dist", "__tests__/**/*"],
+  "module": "commonjs",
+  "moduleResolution": "bundler",
 }
