--- a/packages/app/server/package.json
+++ b/packages/app/server/package.json
@@ -41,6 +41,7 @@
   "license": "ISC",
   "dependencies": {
     "@coinbase/cdp-sdk": "^1.34.0",
+    "@google-cloud/storage": "^7.17.1",
     "@google/genai": "^1.20.0",
     "@merit-systems/echo-typescript-sdk": "workspace:*",
     "@opentelemetry/api": "^1.9.0",
