--- a/packages/app/server/tsconfig.json
+++ b/packages/app/server/tsconfig.json
@@ -9,5 +9,5 @@
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "__tests__/**/*"],
   "module": "commonjs",
-  "moduleResolution": "bundler",
+  "moduleResolution": "bundler"
 }
