--- a/packages/app/server/tsconfig.json
+++ b/packages/app/server/tsconfig.json
@@ -5,6 +5,8 @@
     "rootDir": "./src",
     "baseUrl": "./src",
     "types": ["node"],
+    "moduleResolution": "bundler",
+    "module": "esnext"
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "__tests__/**/*"]
