--- a/packages/app/server/tsconfig.json
+++ b/packages/app/server/tsconfig.json
@@ -4,9 +4,7 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "baseUrl": "./src",
-    "types": ["node"],
-    "moduleResolution": "bundler",
-    "module": "esnext"
+    "types": ["node"]
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "__tests__/**/*"]
