--- a/packages/app/server/tsconfig.json
+++ b/packages/app/server/tsconfig.json
@@ -5,7 +5,8 @@
     "rootDir": "./src",
     "baseUrl": "./src",
     "types": ["node"],
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "exactOptionalPropertyTypes": false
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "__tests__/**/*"]
