--- a/packages/app/server/tsconfig.json
+++ b/packages/app/server/tsconfig.json
@@ -4,11 +4,7 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "baseUrl": "./src",
-    "types": ["node"],
-    "skipLibCheck": true,
-    "exactOptionalPropertyTypes": false,
-    "noImplicitAny": false,
-    "strict": false
+    "types": ["node"]
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "__tests__/**/*"]
