--- a/packages/sdk/echo-start/package.json
+++ b/packages/sdk/echo-start/package.json
@@ -28,6 +28,7 @@
   "author": "Merit Systems",
   "license": "MIT",
   "dependencies": {
+    "@clack/prompts": "^0.11.0",
     "chalk": "^5.3.0",
     "commander": "^12.1.0",
     "degit": "^2.8.4",
