fix timeouts for integ tests

--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -57,9 +57,9 @@ jobs:
       CDP_API_KEY_SECRET: ${{ secrets.CDP_API_KEY_SECRET }}
       CDP_WALLET_SECRET: ${{ secrets.CDP_WALLET_SECRET }}
 
-      # OAuth Configuration
-      OAUTH_REFRESH_TOKEN_EXPIRY_SECONDS: 2592000
-      OAUTH_ACCESS_TOKEN_EXPIRY_SECONDS: 86400
+      # OAuth Configuration (short expiry for fast integration tests)
+      OAUTH_REFRESH_TOKEN_EXPIRY_SECONDS: 5
+      OAUTH_ACCESS_TOKEN_EXPIRY_SECONDS: 5
 
       # Environment Flags
       CI: true
