--- a/.github/workflows/provider-smoke-tests.yml
+++ b/.github/workflows/provider-smoke-tests.yml
@@ -14,7 +14,7 @@ jobs:
   provider-smoke-tests:
     name: Run Provider Smoke Tests
     runs-on: ubuntu-latest
-    timeout-minutes: 20
+    timeout-minutes: 40
 
     steps:
       - name: Checkout code
@@ -43,7 +43,7 @@ jobs:
           railway status --service echo --environment staging || echo "Service status check failed, continuing..."
 
           echo "Waiting for deployment to be ready..."
-          max_attempts=30
+          max_attempts=90
           attempt=0
           while [ $attempt -lt $max_attempts ]; do
             if curl -f -s -o /dev/null https://echo-staging.up.railway.app/health 2>/dev/null; then
@@ -56,7 +56,7 @@ jobs:
           done
 
           if [ $attempt -eq $max_attempts ]; then
-            echo "Deployment did not become ready in time"
+            echo "Deployment did not become ready in time (waited 15 minutes)"
             exit 1
           fi
 
