big boxes for gha

--- a/.github/workflows/publish-sdks.yml
+++ b/.github/workflows/publish-sdks.yml
@@ -14,7 +14,7 @@ on:
 jobs:
   publish:
     name: Build and publish SDK packages
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest-l
     if: startsWith(github.ref, 'refs/tags/') || github.ref == 'refs/heads/production' || github.event_name == 'workflow_dispatch'
     outputs:
       typescript-published: ${{ steps.publish-typescript.outputs.published }}
@@ -275,7 +275,7 @@ jobs:
 
   create-tag:
     name: Create version tag
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest-l
     needs: publish
     if: (needs.publish.outputs.typescript-published == 'true' || needs.publish.outputs.react-published == 'true' || needs.publish.outputs.next-published == 'true' || needs.publish.outputs.aix402-published == 'true' || needs.publish.outputs.echo-start-published == 'true') && github.ref == 'refs/heads/production' && !startsWith(github.ref, 'refs/tags/')
 
