--- a/Dockerfile.railway
+++ b/Dockerfile.railway
@@ -91,6 +91,10 @@ COPY packages/sdk/component-registry/ ./packages/sdk/component-registry/
 WORKDIR /app
 RUN pnpm install
 
+# Build SDK first to ensure latest version is used
+WORKDIR /app
+RUN pnpm exec turbo run build --filter=@merit-systems/echo-typescript-sdk
+
 # Build only what's needed for the server
 WORKDIR /app
 RUN SKIP_ENV_VALIDATION=true pnpm exec turbo run build --filter=echo-server
