--- a/.github/workflows/provider-smoke-tests.yml
+++ b/.github/workflows/provider-smoke-tests.yml
@@ -13,7 +13,7 @@ on:
 jobs:
   provider-smoke-tests:
     name: Run Provider Smoke Tests
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest-l
     timeout-minutes: 40
 
     steps:
