--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -25,7 +25,7 @@ on:
 jobs:
   integration-tests:
     name: Run Integration Tests
-    runs-on: ubuntu-latest-l
+    runs-on: ubuntu-latest
     timeout-minutes: 30
 
     env:
@@ -309,7 +309,7 @@ jobs:
 
   e2e-tests:
     name: End-to-End Tests
-    runs-on: ubuntu-latest-l
+    runs-on: ubuntu-latest
     timeout-minutes: 20
     needs: integration-tests
     if: github.event_name == 'push' || contains(github.event.pull_request.labels.*.name, 'run-e2e')
