Add Groq provider integration and update SDK dependencies

--- a/packages/sdk/ts/package.json
+++ b/packages/sdk/ts/package.json
@@ -57,6 +57,7 @@
   "dependencies": {
     "@ai-sdk/anthropic": "2.0.17",
     "@ai-sdk/google": "2.0.14",
+    "@ai-sdk/groq": "2.0.17",
     "@ai-sdk/openai": "2.0.32",
     "@openrouter/ai-sdk-provider": "1.2.0",
     "ai": "5.0.47"
