update groq models with correct names

--- a/packages/sdk/ts/package.json
+++ b/packages/sdk/ts/package.json
@@ -28,7 +28,8 @@
     "update-models:anthropic": "tsx scripts/update-anthropic-models.ts",
     "update-models:gemini": "tsx scripts/update-gemini-models.ts",
     "update-models:openrouter": "tsx scripts/update-openrouter-models.ts",
-    "update-all-models": "pnpm run update-models:openai && pnpm run update-models:anthropic && pnpm run update-models:gemini && pnpm run update-models:openrouter",
+    "update-models:groq": "tsx scripts/update-groq-models.ts",
+    "update-all-models": "pnpm run update-models:openai && pnpm run update-models:anthropic && pnpm run update-models:gemini && pnpm run update-models:openrouter && pnpm run update-models:groq",
     "prepublishOnly": "pnpm run build"
   },
   "keywords": [
@@ -46,6 +47,7 @@
     "@typescript-eslint/parser": "^8.34.1",
     "dotenv": "^16.5.0",
     "eslint": "^9.29.0",
+    "groq-sdk": "^0.33.0",
     "tsup": "^8.5.0",
     "tsx": "^4.19.2",
     "typescript": "^5.8.3",
