cleaning up env

--- a/packages/app/control/.env.example
+++ b/packages/app/control/.env.example
@@ -1,7 +1,8 @@
 # ----------
 # Environment
 # ----------
-VERCEL_ENV="local"
+
+SKIP_ENV_VALIDATION=1 # Remove in production!
 
 # ----------
 # Application
