--- a/templates/authjs/.env.local
+++ b/templates/authjs/.env.local
@@ -1,3 +1,3 @@
-AUTH_SECRET="lkVmj4BjmBsWmBZYzoZjB1fAsntS4JGNozKdhz3t90U="
+AUTH_SECRET=
 ECHO_APP_ID="74d9c979-e036-4e43-904f-32d214b361fc"
 NEXT_PUBLIC_ECHO_APP_ID="74d9c979-e036-4e43-904f-32d214b361fc"
