--- a/templates/next-chat-x402/.env.example
+++ b/templates/next-chat-x402/.env.example
@@ -1,4 +1,6 @@
 ECHO_APP_ID=
 NEXT_PUBLIC_ECHO_APP_ID=
 NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID=
+
+# https://echo.router.merit.systems/ for production environment
 BASE_URL=
