feat: added clear-history, and render prev messages on resume

--- a/templates/echo-cli/package.json
+++ b/templates/echo-cli/package.json
@@ -10,7 +10,9 @@
   "scripts": {
     "start": "tsx src/index.ts",
     "dev": "tsx src/index.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "clean": "rm -rf dist",
+    "typecheck": "tsc --noEmit"
   },
   "keywords": [],
   "author": "",
