--- a/templates/next-chat-x402/package.json
+++ b/templates/next-chat-x402/package.json
@@ -10,8 +10,8 @@
     "postinstall": "npm dedupe || true"
   },
   "dependencies": {
-    "@ai-sdk/openai": "2.0.16",
     "@ai-sdk/react": "2.0.17",
+    "@merit-systems/ai-x402": "^0.1.4",
     "@merit-systems/echo-next-sdk": "latest",
     "@merit-systems/echo-react-sdk": "latest",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -56,18 +56,5 @@
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.8",
     "typescript": "^5"
-  },
-  "overrides": {
-    "ai": "5.0.19",
-    "@ai-sdk/react": "2.0.17",
-    "@ai-sdk/openai": "2.0.16",
-    "@merit-systems/echo-react-sdk": {
-      "ai": "5.0.19",
-      "@ai-sdk/react": "2.0.17"
-    },
-    "@merit-systems/echo-next-sdk": {
-      "ai": "5.0.19",
-      "@ai-sdk/openai": "2.0.16"
-    }
   }
 }
