--- a/templates/next-chat-x402/.env.local
+++ b/templates/next-chat-x402/.env.local
@@ -1,6 +1,6 @@
-ECHO_APP_ID=d02e6ee3-2b5b-49d0-9a74-0b073efa8209
-NEXT_PUBLIC_ECHO_APP_ID=d02e6ee3-2b5b-49d0-9a74-0b073efa8209
-NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID=592e3344e57cbc26ad91d191e82a4185
+ECHO_APP_ID="74d9c979-e036-4e43-904f-32d214b361fc"
+NEXT_PUBLIC_ECHO_APP_ID="74d9c979-e036-4e43-904f-32d214b361fc"
+NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID="592e3344e57cbc26ad91d191e82a4185"
 
 # https://echo.router.merit.systems/ for production environment
 BASE_URL=
